k8s/infrastructure/argo/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rajsingh-info-tls
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: "true"    
    haproxy.org/server-ssl: "true"
    haproxy.org/ssl-passthrough: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: argo.stg.rajsingh.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-argocd-server
                port:
                  name: https
  tls:
    - secretName: argo-rajsingh-info-tls
      hosts:
        - argo.stg.rajsingh.info
